@@ -1,4 +1,10 @@
-﻿drkns 02.03.2015 22:15:32 +0200 - build 4285
+﻿drkns 03.03.2015 22:47:29 +0200 - build 4286
+
+1. 0002957: Undo отменяет добавленную строку, но после сохранения файла она остаётся
+
+2. Раскрываем главное меню в том числе и по стрелке вверх.
+
+drkns 02.03.2015 22:15:32 +0200 - build 4285
 
 1. Уточнение 4280.1.
 
